--- a/content/references.bib
+++ b/content/references.bib
@@ -8,3 +8,110 @@
   year = {2001},
   publisher = {New York, NY, USA:}
 }
+
+@article{ldf,
+  title = {{Triple Pattern Fragments:} a Low-cost Knowledge Graph Interface for the {Web}},
+  author = {Verborgh, Ruben and Vander Sande, Miel and Hartig, Olaf and Van Herwegen, Joachim and De Vocht, Laurens and De Meester, Ben and Haesendonck, Gerald and Colpaert, Pieter},
+  journal = {Journal of Web Semantics},
+  month = mar,
+  year = 2016,
+  volume = {37--38},
+  pages.bak = {184--206},
+  issn = {1570-8268},
+  doi = {10.1016/j.websem.2016.03.003},
+  url = {http://linkeddatafragments.org/publications/jws2016.pdf},
+}
+
+@TechReport{spec:sparqllang,
+  title = {SPARQL 1.1 Query Language},
+  author = {Harris, Steve and Seaborne, Andy and Prud'hommeaux, Eric},
+  type = "Recommendation",
+  institution = "W3C",
+  month = mar,
+  year = {2013},
+  url = {https://www.w3.org/TR/2013/REC-sparql11-query-20130321/}
+}
+
+@TechReport{spec:sparqlprot,
+  title = {SPARQL 1.1 Protocol},
+  author = {Feigenbaum, Lee and Todd Williams, Gregory and Grant Clark, Kendall and Torres, Elias},
+  type = "Rec.",
+  institution = "W3C",
+  month = {mar},
+  year = {2013},
+  url = {https://www.w3.org/TR/2013/REC-sparql11-protocol-20130321/}
+}
+
+@TechReport{spec:rdf,
+  title = {RDF 1.1: Concepts and Abstract Syntax},
+  type = "Recommendation",
+  institution = "W3C",
+  author = {Cyganiak, Richard and Wood, David and Lanthaler, Markus},
+  month = {feb},
+  year = {2014},
+  url = {https://www.w3.org/TR/2014/REC-rdf11-concepts-20140225/}
+}
+
+@online{LinkedDataPrinciples,
+  title = {Linked Data},
+  author = {Berners-Lee, Tim},
+  year = 2009,
+  howpublished = {Design Issues},
+  url = {https://www.w3.org/DesignIssues/LinkedData.html},
+}
+
+@article{linkeddata,
+  title = {{Linked Data} - the story so far},
+  author = {Bizer, Christian and Heath, Tom and Berners-Lee, Tim},
+  journal = {Semantic Services, Interoperability and Web Applications: Emerging Concepts},
+  pages = {205--227},
+  year = {2009}
+}
+
+@article{hydra,
+  title = {Hydra: A Vocabulary for Hypermedia-Driven Web APIs.},
+  author = {Lanthaler, Markus and G{\"u}tl, Christian},
+  journal = {LDOW},
+  volume = {996},
+  year = {2013}
+}
+
+@inproceedings{describingapiresponses,
+  title = {Declaratively Describing Responses of Hypermedia-Driven Web APIs},
+  author = {Taelman, Ruben and Verborgh, Ruben},
+  booktitle = {Proceedings of the 9th International Conference on Knowledge Capture},
+  year = {2017},
+  month = dec,
+  url = {https://linkeddatafragments.github.io/Article-Declarative-Hypermedia-Responses/}
+}
+
+@article{webapifeatures,
+  author    = {Ruben Verborgh and
+               Michel Dumontier},
+  title     = {A Web {API} ecosystem through feature-based reuse},
+  journal   = {CoRR},
+  volume    = {abs/1609.07108},
+  year      = {2016},
+  url       = {http://arxiv.org/abs/1609.07108},
+  timestamp = {Wed, 07 Jun 2017 14:42:26 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/VerborghD16},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@book{rest,
+  title={Architectural styles and the design of network-based software architectures},
+  author={Fielding, Roy T and Taylor, Richard N},
+  volume={7},
+  year={2000},
+  publisher={University of California, Irvine Doctoral dissertation},
+  url={https://www.ics.uci.edu/~fielding/pubs/dissertation/fielding_dissertation.pdf}
+}
+
+@inproceedings{taelman_iswc_resources_comunica_2018,
+  author = {Taelman, Ruben and Van Herwegen, Joachim and Vander Sande, Miel and Verborgh, Ruben},
+  title = {Comunica: a Modular SPARQL Query Engine for the Web},
+  booktitle = {Proceedings of the 17th International Semantic Web Conference},
+  year = {2018},
+  month = oct,
+  url = {https://comunica.github.io/Article-ISWC2018-Resource/}
+}
