Add query-based metadata extraction

--- a/content/references.bib
+++ b/content/references.bib
@@ -115,3 +115,20 @@
   month = oct,
   url = {https://comunica.github.io/Article-ISWC2018-Resource/}
 }
+
+@inproceedings{taelman_iswc_demo_graphqlld_2018,
+  author = {Taelman, Ruben and Vander Sande, Miel and Verborgh, Ruben},
+  title = {GraphQL-LD: Linked Data Querying with GraphQL},
+  booktitle = {Proceedings of the 17th International Semantic Web Conference: Posters and Demos},
+  year = {2018},
+  month = oct,
+  url = {https://comunica.github.io/Article-ISWC2018-Demo-GraphQlLD/}
+}
+
+
+@article{jsonld,
+  title={JSON-LD 1.0: a JSON-based serialization for linked data},
+  author={World Wide Web Consortium and others},
+  year={2014},
+  publisher={World Wide Web Consortium}
+}
