Shorten to four pages

--- a/content/references.bib
+++ b/content/references.bib
@@ -15,7 +15,7 @@
   journal = {Journal of Web Semantics},
   month = mar,
   year = 2016,
-  volume = {37--38},
+  volume.bak = {37--38},
   pages.bak = {184--206},
   issn = {1570-8268},
   doi = {10.1016/j.websem.2016.03.003},
@@ -103,7 +103,7 @@
   author={Fielding, Roy T and Taylor, Richard N},
   volume={7},
   year={2000},
-  publisher={University of California, Irvine Doctoral dissertation},
+  publisher.bak={University of California, Irvine Doctoral dissertation},
   url={https://www.ics.uci.edu/~fielding/pubs/dissertation/fielding_dissertation.pdf}
 }
 
